[package]
name = "mont2"
version = "0.1.0"
authors = ["Eric Schorn <eric.schorn@nccgroup.com>"]
edition = "2018"
license = "bsd-3-clause"
repository = "https://github.com/nccgroup/pairing"
readme = "README.md"
description = "Montgomery arithmetic demonstrator"
categories = ["cryptography"]
keywords = ["cryptography", "pairing", "elliptic", "BLS12-381", "Montgomery"]
build = "src/build.rs"


[dependencies]
# No dependencies!


[build-dependencies]
cc = "1.0.67"


[dev-dependencies]
rand = "0.8.3"
num-bigint = "0.4.0"
num-traits = "0.2.14"
criterion = {version = "0.3.4", features = ["html_reports"] }
lazy_static = "1.4.0"


[profile.release]
debug = 2
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false


[profile.test]
debug = 2
debug-assertions = true
incremental = false
lto = true
opt-level = 3
overflow-checks = true


[[bench]]
path = "src/bench.rs"
name = "field_arithmetic"
harness = false


[profile.bench]
debug = 2
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
